# Weather-API

./: .gitignore  Dockerfile  README.md  dev.db  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py  repositories.py  schemas.py
app/routers/: weather.py
app/services/: openweather.py
app/templates/: home.html
app/templates/assets/: styles.css
